--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textAlignment="center"
+        android:layout_marginTop="24dp"
         android:textColor="@color/color_default"
         android:textSize="48sp"
         android:textStyle="bold"
