--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_default">#7159c1</color>
     <color name="color_default_dark">#433573</color>
+    <color name="snackbar_error">#B11B1B</color>
+    <color name="snackbar_success">#4CAF50</color>
 </resources>
