--- a/app/src/main/res/layout/item_users_list.xml
+++ b/app/src/main/res/layout/item_users_list.xml
@@ -69,6 +69,15 @@
                 app:layout_constraintTop_toBottomOf="@id/userNameTextView"
                 tools:text="Isto é uma descrição, ela tem de ficar bem longa para que eu teste" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/userDescriptionTextView"
+                android:text="Ver perfil"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
