Criando navegação para tela de info do usuário

--- a/app/src/main/res/layout/item_users_list.xml
+++ b/app/src/main/res/layout/item_users_list.xml
@@ -70,13 +70,15 @@
                 tools:text="Isto é uma descrição, ela tem de ficar bem longa para que eu teste" />
 
             <Button
+                android:id="@+id/infoButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/userDescriptionTextView"
-                android:text="Ver perfil"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="Ver perfil"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/userDescriptionTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
