--- a/app/src/main/res/layout/user_info_activity.xml
+++ b/app/src/main/res/layout/user_info_activity.xml
@@ -52,13 +52,22 @@
         tools:text="Isto é uma descrição, ela tem de ficar bem longa para que eu teste" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_marginTop="12dp"
         android:layout_height="1dp"
+        android:layout_marginTop="12dp"
         android:background="@color/color_default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userDescriptionInfoTextView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
