--- a/app/src/main/res/layout/item_repositories_list.xml
+++ b/app/src/main/res/layout/item_repositories_list.xml
@@ -50,6 +50,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/repositoryNameTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#333"
@@ -58,6 +59,7 @@
                     tools:text="Title" />
 
                 <TextView
+                    android:id="@+id/repositoryOwnerTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
